--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,10 @@
     <string name="rus_voc">На Русском языке</string>
     <string name="menu_exit">Выход</string>
     <string name="note">Поиск</string>
-    <string name="letter">Буква</string>
-    <string name="word_text">Слово</string>
-    <string name="voc_text">Перевод</string>
-    <string name="your_word">Новое слово</string>
-    <string name="text_edit_text">Новое слово</string>
-    <string name="voc_edit_text">Перевод</string>
+    <string name="word_text">Термин</string>
+    <string name="voc_text">Описание</string>
+    <string name="your_word">Новый термин</string>
+    <string name="text_edit_text">Новый термин</string>
+    <string name="voc_edit_text">Описание</string>
     <string name="buttonSave">Сохранить</string>
 </resources>
